just fixed the alignment on the no search results page

--- a/Views/css/site-wide.css
+++ b/Views/css/site-wide.css
@@ -907,7 +907,7 @@ text-align: center
     width:100%;
     padding:0;
     justify-content: flex-start;
-    margin-left:72px;
+    margin-left:97px;
 }
 
 
